resumed and added in the second special offer

--- a/specialoffers.html
+++ b/specialoffers.html
@@ -49,19 +49,29 @@
               quae ab illo inventore veritatis et quasi architecto beatae vitae
               dicta sunt explicabo.
             </p>
+            <div class="SO-learn-more">
+              <span class="font1">LEARN MORE</span>
+            </div>
           </div>
         </div>
-        <!-- <div class="SO-p2">
+        <div class="SO-p2">
           <div class="SO-p2-img"></div>
           <div class="SO-p-quote">
+            <div class="SO-location">
+              <div class="SO2-place">BANGKOK, THAILAND</div>
+              <p class="SO-perOff2">(10% off)</p>
+            </div>
             <p class="SO-quotes-font">
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem
               accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
               quae ab illo inventore veritatis et quasi architecto beatae vitae
               dicta sunt explicabo.
             </p>
+            <div class="SO-learn-more">
+              <span class="font1">LEARN MORE</span>
+            </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
     <footer>
