completed the blog page and added a media query. ready for the contact page

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>About Page</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -15,119 +15,64 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav class="Nav-White">
-      <div class="logo-W"></div>
+    <nav class="Nav-Black">
+      <div class="logo-B"></div>
       <div class="links">
-        <a class="Font-nav-W" href="index.html">home</a>
+        <a class="Font-nav-B" href="index.html">home</a>
         <div class="navLine"></div>
-        <a class="Font-nav-W" href="about.html">about</a>
+        <a class="Font-nav-B" href="about.html">about</a>
         <div class="navLine"></div>
-        <a class="Font-nav-W" href="tours.html">tours</a>
+        <a class="Font-nav-B" href="tours.html">tours</a>
         <div class="navLine"></div>
-        <a class="Font-nav-W" href="specialoffers.html">special offers</a>
+        <a class="Font-nav-B" href="specialoffers.html">special offers</a>
         <div class="navLine"></div>
-        <a class="Font-nav-W" href="blog.html">blog</a>
+        <a class="Font-nav-B" href="blog.html">blog</a>
         <div class="navLine"></div>
-        <a class="Font-nav-W" href="contact.html">contact</a>
+        <a class="Font-nav-B" href="contact.html">contact</a>
       </div>
     </nav>
-    <div class="home">
-      <div class="hero">
-        <div class="callout">
-          <p class="fontHead2">travel-fly</p>
-          <p class="fontCallT call-text">
-            Lorem ipsum doler sit amet, consectetur adipisicing elit. Fugiat
-            aliquid minus nemo sed est.
-          </p>
-          <div class="read-more">
-            <span class="font1">READ MORE</span>
-          </div>
-        </div>
+    <div class="blog">
+      <div class="blog-title">
+        <p class="blog-title-font">BLOG:</p>
       </div>
-      <div class="specials">
-        <div class="SPbox1">
-          <div class="placeName">
-            <p class="fontSpecial1">ISRAEL</p>
-          </div>
-          <div class="placePrice">
-            <p class="fontSpecial2">from $1000</p>
-          </div>
-          <div class="learn-more">
-            <span class="font1">LEARN MORE</span>
-          </div>
+      <div class="blog-1">
+        <div class="blog-date">
+          <p class="blog-date-font1">06</p>
+          <p class="blog-date-font2">JUN</p>
         </div>
-        <div class="SPbox2">
-          <div class="placeName">
-            <p class="fontSpecial1">U.S.A</p>
-          </div>
-          <div class="placePrice">
-            <p class="fontSpecial2">from $1500</p>
-          </div>
-          <div class="learn-more">
-            <span class="font1">LEARN MORE</span>
-          </div>
-        </div>
-        <div class="SPbox3">
-          <div class="placeName">
-            <p class="fontSpecial1">AUSTRAILIA</p>
-          </div>
-          <div class="placePrice">
-            <p class="fontSpecial2">from $1800</p>
-          </div>
-          <div class="learn-more">
-            <span class="font1">LEARN MORE</span>
-          </div>
-        </div>
-      </div>
-      <div class="header">
-        <p class="fontHead">Booking Form</p>
-      </div>
-      <div class="form">
-        <div class="form-slotA">
-          <input type="text" class="form-box1" placeholder="name..." />
-          <input type="text" class="form-box2" placeholder="email..." />
-          <div class="padding1"></div>
-          <input type="text" class="form-box1" placeholder="country..." />
-          <input type="text" class="form-box2" placeholder="hotel..." />
-        </div>
-        <div class="cal">
-          <div class="cal-in">
-            <div class="label-in">
-              <label for="name">Check-in</label>
+        <div class="blog-info">
+          <div class="blog-img"></div>
+          <div class="blog-info-para">
+            <div class="blog-ip-title">
+              Sed et persipiatis unde omnis iste natus
             </div>
-            <input type="text" placeholder="5/10/2020" />
-            <i class="fa-solid fa-calendar-days cal-box"></i>
-          </div>
-          <div class="cal-out">
-            <div class="label-out">
-              <label for="name">Check-out</label>
+            <div class="blog-ip-para">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi architecto beatae vitae
+              dicta sunt explicabo.
             </div>
-            <input type="text" placeholder="5/20/2020" />
-            <i class="fa-solid fa-calendar-days cal-box"></i>
           </div>
         </div>
-        <div class="ACR">
-          <div class="adults">
-            <label for="name">Adult</label>
-            <input type="text" class="ACR-box" placeholder="2" />
-            <i class="fa-solid fa-caret-down ACR-arrow"></i>
-          </div>
-          <div class="children">
-            <label for="name">Children</label>
-            <input type="text" class="ACR-box" placeholder="0" />
-            <i class="fa-solid fa-caret-down ACR-arrow"></i>
-          </div>
-          <div class="rooms">
-            <label for="name">Rooms</label>
-            <input type="text" class="ACR-box" placeholder="1" />
-            <i class="fa-solid fa-caret-down ACR-arrow"></i>
-          </div>
+      </div>
+      <div class="blog-1">
+        <div class="blog-date">
+          <p class="blog-date-font1">23</p>
+          <p class="blog-date-font2">JUL</p>
         </div>
-        <div class="message">
-          <input type="text" class="mes-box" placeholder="message..." />
-        </div>
-        <div class="submit-button">
-          <span class="font1">SUBMIT</span>
+        <div class="blog-info">
+          <div class="blog-img"></div>
+          <div class="blog-info-para">
+            <div class="blog-ip-title">
+              Sed et persipiatis unde omnis iste natus
+            </div>
+            <div class="blog-ip-para">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi architecto beatae vitae
+              dicta sunt explicabo.
+            </div>
+          </div>
         </div>
       </div>
     </div>
